# wand

./: .clang-format  .gitignore  LICENSE  Makefile  README.md  install.sh  meson.build  spl.kdev4  test  tests.sh  uninstall.sh
.kdev4/: spl.kdev4
res/spl/core/: IO.spl  Makefile  String.spl  core.spl  lib.c  spl.core.stdlib.ll
res/spl/core/clib/: String.h  gc.h  io.h  lib.c
res/wand/core/: IO.wand  Makefile  String.wand  core.wand  wand.core.stdlib.ll
res/wand/core/clib/: String.h  gc.h  io.h  lib.c
src/: Defs.cpp  Defs.hpp  License.hpp  main.cpp  main.hpp
src/IRTree/builder/: IRTreeBuilder.cpp  IRTreeBuilder.hpp
src/IRTree/node/: IRFunction.cpp  IRFunction.hpp  IRNode.cpp  IRNode.hpp  IRStruct.cpp  IRStruct.hpp  IRTree.cpp  IRTree.hpp
src/IRTree/node/statement/: IRBlock.cpp  IRBlock.hpp  IRIfElse.cpp  IRIfElse.hpp  IRLoop.cpp  IRLoop.hpp  IRReturn.cpp  IRReturn.hpp  IRStatement.cpp  IRStatement.hpp  IRVarDecl.cpp  IRVarDecl.hpp  IRVarsDecl.cpp  IRVarsDecl.hpp  IRWhile.cpp  IRWhile.hpp
src/IRTree/node/statement/expression/: IRAccess.cpp  IRAccess.hpp  IRAlloc.cpp  IRAlloc.hpp  IRBinOp.cpp  IRBinOp.hpp  IRCall.cpp  IRCall.hpp  IRExpression.cpp  IRExpression.hpp  IRFunc.cpp  IRFunc.hpp  IRLiteral.cpp  IRLiteral.hpp  IRUnOp.cpp  IRUnOp.hpp  IRValue.cpp  IRValue.hpp  IRVar.cpp  IRVar.hpp
src/ast/builder/: AstBuilder.cpp  AstBuilder.hpp
src/ast/node/: AccessNode.cpp  AccessNode.hpp  ClassDeclNode.cpp  ClassDeclNode.hpp  ClassRecordNode.cpp  ClassRecordNode.hpp  CompilationUnitNode.cpp  CompilationUnitNode.hpp  ConstructorDeclNode.cpp  ConstructorDeclNode.hpp  DestructorDeclNode.cpp  DestructorDeclNode.hpp  GenericNode.cpp  GenericNode.hpp  ImportDeclNode.cpp  ImportDeclNode.hpp  MethodDeclNode.cpp  MethodDeclNode.hpp  ModifiersNode.cpp  ModifiersNode.hpp  Node.cpp  Node.hpp  PackageDeclNode.cpp  PackageDeclNode.hpp  VarDeclNode.cpp  VarDeclNode.hpp  VarsDeclNode.cpp  VarsDeclNode.hpp
src/ast/node/statement/: AssertNode.cpp  AssertNode.hpp  BlockNode.cpp  BlockNode.hpp  BreakNode.cpp  BreakNode.hpp  ContinueNode.cpp  ContinueNode.hpp  ForEachNode.cpp  ForEachNode.hpp  ForNode.cpp  ForNode.hpp  IfElseNode.cpp  IfElseNode.hpp  ReturnNode.cpp  ReturnNode.hpp  StatementNode.cpp  StatementNode.hpp  WhileNode.cpp  WhileNode.hpp
src/ast/node/statement/expression/: ArrayAccessNode.cpp  ArrayAccessNode.hpp  ArrayCreationNode.cpp  ArrayCreationNode.hpp  ArrayInitializerNode.cpp  ArrayInitializerNode.hpp  AssignableNode.cpp  AssignableNode.hpp  BinaryOperatorNode.cpp  BinaryOperatorNode.hpp  CastExpr.cpp  CastExpr.hpp  ExpressionNode.cpp  ExpressionNode.hpp  MethodCallNode.cpp  MethodCallNode.hpp  NewNode.cpp  NewNode.hpp  TypeNode.cpp  TypeNode.hpp  UnaryOperatorNode.cpp  UnaryOperatorNode.hpp  VarRecordNode.cpp  VarRecordNode.hpp
src/ast/node/statement/expression/literal/: BoolLiteralNode.cpp  BoolLiteralNode.hpp  CharLiteralNode.cpp  CharLiteralNode.hpp  FloatLiteralNode.cpp  FloatLiteralNode.hpp  IntLiteralNode.cpp  IntLiteralNode.hpp  NullNode.cpp  NullNode.hpp  StringLiteralNode.cpp  StringLiteralNode.hpp
src/codeGen/: CodeGen.cpp  CodeGen.hpp
src/codeGen/utils/: CodeGenUtils.cpp  CodeGenUtils.hpp  LLVMHelper.cpp  LLVMHelper.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
src/symbolListener/: SymbolListener.cpp  SymbolListener.hpp
src/symbolTable/: Scope.cpp  Scope.hpp  SymbolTable.cpp  SymbolTable.hpp
src/symbolTable/records/: ClassRecord.cpp  ClassRecord.hpp  MethodRecord.cpp  MethodRecord.hpp  Record.cpp  Record.hpp  VarRecord.cpp  VarRecord.hpp
src/utils/: ArgsParser.cpp  ArgsParser.hpp  Out.cpp  Out.hpp  ParserUtils.cpp  ParserUtils.hpp  Path.cpp  Path.hpp  UniqueNumber.cpp  UniqueNumber.hpp
tests/: clean_tests.sh  tests.cpp  tests.sh
tests/1/: test.cpp  test.sh
tests/1/test/: test.spl  test.wand
tests/10/: test.cpp
tests/10/test/: test.spl  test.wand
tests/11/: test.cpp
tests/11/test/: test.spl  test.wand
tests/12/: test.cpp
tests/12/test/: test.spl  test.wand
tests/13/: test.cpp  test.sh
tests/13/test/: test.spl  test.wand
tests/14/: test.cpp
tests/14/test/: test.spl  test.wand
tests/15/: test.cpp
tests/15/test/: test.spl  test.wand
tests/16/: test.cpp  test.sh
tests/16/test/: test.spl  test.wand
tests/2/: test.cpp
tests/2/test/: test.spl  test.wand
tests/3/: test.cpp
tests/3/test/: test.spl  test.wand
tests/4/: test.cpp
tests/4/test/: test.spl  test.wand
tests/5/: test.cpp
tests/5/test/: test.spl  test.wand
tests/6/: test.cpp
tests/6/test/: test.spl  test.wand
tests/7/: test.cpp
tests/7/test/: test.spl  test.wand
tests/8/: test.cpp
tests/8/test/: test.spl  test.wand
tests/9/: test.cpp
tests/9/test/: test.spl  test.wand
